--- a/darkmoon/api/templates/index.html
+++ b/darkmoon/api/templates/index.html
@@ -7,7 +7,7 @@
     <link href="{{ url_for('static',path='/variables.css') }}" rel="stylesheet">
 </head>
 
-<html>
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 
 <body class="homepage">
 
@@ -58,8 +58,11 @@
     </section>
 
     <footer>
-        <button class="dropbtn"><a href="https://github.com/obscuritylabs/darkmoon">View Darkmoon
-                Repository</a></button>
+
+        <a class="github-button" href="https://github.com/obscuritylabs/darkmoon" data-show-count="true"
+            data-size="large">Darkmoon
+            Repository</a>
+
     </footer>
 
 </body>
