--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -54,59 +54,60 @@
 
     </header>
 
-    </div>
-    <h1></h1>
-
-    <form action onsubmit="hashSubmission()">
-
-        <h2> Hash </h2>
-
-        <label for="Hash" class="hash" data-icon="p"> </label>
-        <input id="" name="password" required="required" type="text" placeholder="Hash" />
-
-        <hr>
-
-        <h2>
-
-        </h2>
-
-        <h2>Hash Type</h2>
-
-        <input type="radio" id="MDS" required="required" name="hash_type" value="MDS">
-        <label for="MDS">MDS</label><br>
-
-        <input type="radio" id="SHA-1" name="hash_type" value="SHA-1">
-        <label for="SHA-1">SHA-1</SHA-1></label><br>
-
-        <input type="radio" id="SHA-256" name="hash_type" value="SHA-256">
-        <label for="SHA-256">SHA-256</label><br>
-
-        <input type="radio" id="SHA-512" name="hash_type" value="SHA-512">
-        <label for="SHA-512">SHA-512</label>
-
-        <h2>
-
-        </h2>
-
-        <input type="submit" value="Submit" />
-
-
-    </form>
-
-    <h2>
-
-    </h2>
-
-
-    <form action onsubmit="fileSubmission()">
-
-        <h2> Upload File </h2>
-        <input type="file" id="myFile" required="required" name="filename">
+    <div style="padding:90px;">
         <h1></h1>
-        <input type="submit" value="Submit">
+
+        <form action onsubmit="hashSubmission()">
+
+            <h2> Hash </h2>
+
+            <label for="Hash" class="hash" data-icon="p"> </label>
+            <input id="" name="password" required="required" type="text" placeholder="Hash" />
+
+            <hr>
+
+            <h2>
+
+            </h2>
+
+            <h2>Hash Type</h2>
+
+            <input type="radio" id="MDS" required="required" name="hash_type" value="MDS">
+            <label for="MDS">MDS</label><br>
+
+            <input type="radio" id="SHA-1" name="hash_type" value="SHA-1">
+            <label for="SHA-1">SHA-1</SHA-1></label><br>
+
+            <input type="radio" id="SHA-256" name="hash_type" value="SHA-256">
+            <label for="SHA-256">SHA-256</label><br>
+
+            <input type="radio" id="SHA-512" name="hash_type" value="SHA-512">
+            <label for="SHA-512">SHA-512</label>
+
+            <h2>
+
+            </h2>
+
+            <input type="submit" value="Submit" />
 
 
-    </form>
+        </form>
+
+        <h2>
+
+        </h2>
+
+
+        <form action onsubmit="fileSubmission()">
+
+            <h2> Upload File </h2>
+            <input type="file" id="myFile" required="required" name="filename">
+            <h1></h1>
+            <input type="submit" value="Submit">
+
+
+        </form>
+    </div>
 
 
 
