docs: Corrected label to MD5

--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -73,7 +73,7 @@
             <h2>Hash Type</h2>
 
             <input type="radio" id="MDS" required="required" name="hash_type" value="MDS">
-            <label for="MDS">MDS</label><br>
+            <label for="MDS">MD5</label><br>
 
             <input type="radio" id="SHA-1" name="hash_type" value="SHA-1">
             <label for="SHA-1">SHA-1</SHA-1></label><br>
