feat: Made changes to new homepage (#103)
* feat: Made changes to new homepage

* feat: New jinja test to work with new webpages

* feat: Updated homepage

* feat: Updated homepage

* feat: updated homepage and hash page

* feat: Updated homepage

* feat: Updated homepage

* feat: create webpage

* feat: Update to iso upload and hash webpage

* feat: create webpage

* feat: create homepage and clean up initial form

* feat: create homepage and clean up initial form

* feat: Added new changes from 65-new-hash branch

* feat: Added new design key and condensed css filesh

* feat: Cleaned up all webpages

* feat: Added darkmoon repository link to homepage and added response for all submit buttons

* feat: Updated darkmoon repository link style and changed data input border color

* feat: Centered form

* docs: Corrected label to MD5

---------

Co-authored-by: XxXgamerguyXxX <66753613+XxXgamerguyXxX@users.noreply.github.com>
Co-authored-by: Siri Chatradi <sirichatradi07@gmail.com>

--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -3,50 +3,113 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static',path='/variables.css') }}" rel="stylesheet">
 </head>
 
-<form action="/webpages/upload">
+<script>
+    function hashSubmission() {
+        alert("Successfully Submitted");
+    }
 
-    <button>ISO Upload</button>
-
-</form>
+    function fileSubmission() {
+        alert("File Successfully Uploaded");
+    }
+</script>
 
 <body>
+    <header>
 
-    </div>
+        <div class="logo">
 
-    <h1>
+            <h1 id="blackoutline">
 
-        <form action="/process_data" method="post" enctype="multipart/form-data">
+                <p>Darkmoon</p>
 
-            <h2> Hash and Hash Type </h2>
+            </h1>
 
-            <label for="hash_type" class=HT data-icon="u"> </label>
+        </div>
 
-            <select id="hash_type" name="hash_type" required="required" type="text" placeholder="Hash Type">
+        <nav>
 
-                <option value="md5">MD5</option>
-                <option value="sha1">SHA-1</option>
-                <option value="sha256">SHA-256</option>
-                <option value="sha512">SHA-512</option>
+            <ul>
+                <button class="dropbtn"><a href="/webpages">Home</a></button>
+                <div class="dropdown">
 
-                <label for="Hash" class="hash" data-icon="p"> </label>
+                    <button class="button button1">Tools</button>
 
-                <input id="" name="password" required="required" type="text" placeholder="Hash" />
+                    <div class="dropdown-content">
 
-                <input type="submit" value="Submit" />
+                        <a href="/webpages/hash-lookup">Hash Lookup</a>
+
+                        <a href="/webpages/upload">ISO Upload</a>
+
+                    </div>
+
+                </div>
+                <button class="dropbtn"><a href="#">Credit</a></button>
+            </ul>
+
+        </nav>
+
+    </header>
+
+    <div style="padding:90px;">
+        <h1></h1>
+
+        <form action onsubmit="hashSubmission()">
+
+            <h2> Hash </h2>
+
+            <label for="Hash" class="hash" data-icon="p"> </label>
+            <input id="" name="password" required="required" type="text" placeholder="Hash" />
+
+            <hr>
+
+            <h2>
+
+            </h2>
+
+            <h2>Hash Type</h2>
+
+            <input type="radio" id="MDS" required="required" name="hash_type" value="MDS">
+            <label for="MDS">MD5</label><br>
+
+            <input type="radio" id="SHA-1" name="hash_type" value="SHA-1">
+            <label for="SHA-1">SHA-1</SHA-1></label><br>
+
+            <input type="radio" id="SHA-256" name="hash_type" value="SHA-256">
+            <label for="SHA-256">SHA-256</label><br>
+
+            <input type="radio" id="SHA-512" name="hash_type" value="SHA-512">
+            <label for="SHA-512">SHA-512</label>
+
+            <h2>
+
+            </h2>
+
+            <input type="submit" value="Submit" />
+
+
         </form>
 
-    </h1>
+        <h2>
 
-    <form action>
+        </h2>
 
-        <h2> Upload File </h2>
-        <input type="file" id="myFile" name="filename">
-        <input type="submit">
 
-    </form>
+        <form action onsubmit="fileSubmission()">
+
+            <h2> Upload File </h2>
+            <input type="file" id="myFile" required="required" name="filename">
+            <h1></h1>
+            <input type="submit" value="Submit">
+
+
+        </form>
+    </div>
+
+
 
 </body>
 
