--- a/darkmoon/api/templates/upload.html
+++ b/darkmoon/api/templates/upload.html
@@ -3,68 +3,109 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static',path='/variables.css') }}" rel="stylesheet">
 </head>
 
+<script>
+    function submissionComplete() {
+        alert("Data Submitted");
+    }
+</script>
+
 <body>
+    <header>
 
-    <form action="/webpages/hash-lookup">
+        <div class="logo">
 
-        <button>
-            Hash Lookup
-        </button>
+            <h1 id="blackoutline">
 
-    </form>
+                <p>Darkmoon</p>
 
+            </h1>
+
+        </div>
+
+        <nav>
+
+            <ul>
+                <button class="dropbtn"><a href="/webpages">Home</a></button>
+                <div class="dropdown">
+
+                    <button class="button button1">Tools</button>
+
+                    <div class="dropdown-content">
+
+                        <a href="/webpages/hash-lookup">Hash Lookup</a>
+
+                        <a href="/webpages/upload">ISO Upload</a>
+
+                    </div>
+
+                </div>
+                <button class="dropbtn"><a href="#">Credit</a></button>
+            </ul>
+
+        </nav>
+
+    </header>
+
+
+
+    <h1></h1>
+    <div style="padding:40px;">
+        <form action onsubmit="submissionComplete()">
+
+            <h2> .ISO Upload </h2>
+            <input type="file" id="myFile" required="required" name="filename">
+
+
+
+            <hr>
+
+            <h1></h1>
+            <h2> Packer Template Upload </h2>
+            <input type="file" id="myFile" required="required" name="filename">
+
+
+
+            <hr>
+
+            <h1></h1>
+            <h2> Answer File Upload </h2>
+            <input type="file" id="myFile" required="required" name="filename">
+
+
+            <h1>
+
+                <h2> Operating System </h2>
+                <label for="Operating" class="opSystem" data-icon="u"></label>
+
+                <input id="Operating" name="opSystem" required="required" type="text" placeholder="Operating System" />
+
+            </h1>
+            <h1></h1>
+            <h1>
+                <h2> Version </h2>
+                <label for="version" class="vers" data-icon="p"> </label>
+
+                <input id="version" name="password" required="required" type="text" placeholder="Version" />
+
+            </h1>
+            <h1></h1>
+            <h1>
+                <h2> Build </h2>
+                <label for="build" class="bu" data-icon="u"> </label>
+
+                <input id="build" name="bu" required="required" type="text" placeholder="Build" />
+                <h1></h1>
+                <input type="submit" value="Submit">
+
+
+            </h1>
+        </form>
     </div>
 
-    <h1>
-
-        <label for="Operating" class="opSystem" data-icon="u"></label>
-
-        <input id="Operating" name="opSystem" required="required" type="text" placeholder="Operating System" />
-
-    </h1>
-
-    <h1>
-
-        <label for="version" class="vers" data-icon="p"> </label>
-
-        <input id="version" name="password" required="required" type="text" placeholder="Version" />
-
-    </h1>
-
-    <h1>
-
-        <label for="build" class="bu" data-icon="u"> </label>
-
-        <input id="build" name="bu" required="required" type="text" placeholder="Build" />
-
-    </h1>
-
-    <form action>
-
-        <h2> .ISO Upload </h2>
-        <input type="file" id="myFile" name="filename">
-        <input type="submit">
-
-    </form>
-
-    <form>
-
-        <h2> Packer Template Upload </h2>
-        <input type="file" id="myFile" name="filename">
-        <input type="submit">
-
-    </form>
-
-    <form>
-
-        <h2> Answer File Upload </h2>
-        <input type="file" id="myFile" name="filename">
-        <input type="submit">
-
-    </form>
 
 </body>
 
