--- a/darkmoon/api/static/style.css
+++ b/darkmoon/api/static/style.css
@@ -239,3 +239,17 @@ input[type="submit"]:hover {
         content: ''
     }
 }
+
+.result-box {
+    border: 1px solid #ccc;
+    padding: 10px;
+    background-color: #f9f9f9;
+    margin-top: 20px;
+}
+
+.results-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
