--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -93,24 +93,18 @@
 
         </form>
 
-        <h2>
+        <h2></h2>
 
-        </h2>
-
-
-        <form action="http://127.0.0.1:8000/metadata/hashComparison" onsubmit="fileSubmission()" method="post"
-            enctype="multipart/form-data">
+        <form action="/webpages/fileupload" onsubmit="fileSubmission()" method="post" enctype="multipart/form-data">
 
             <h2> Upload File </h2>
-            <input type="file" id="myFile" required="required" name="filename">
+            <input type="file" required="required" name="file">
             <h1></h1>
             <input type="submit" value="Submit">
 
-
         </form>
+
     </div>
-
-
 
 </body>
 
