feat: New webpage for hash output and postendpoint added for sus hash

--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -57,7 +57,7 @@
     <div style="padding:90px;">
         <h1></h1>
 
-        <form action onsubmit="hashSubmission()">
+        <form action="/webpages/hashupload" method="post" enctype="multipart/form-data" onsubmit="hashSubmission()">
 
             <h2> Hash </h2>
 
