feat: Made changes to hashcompare endpoint

--- a/darkmoon/api/templates/hash_compare_result.html
+++ b/darkmoon/api/templates/hash_compare_result.html
@@ -15,12 +15,12 @@
 
             <div class="result-box">
                 <h2>Uploaded File:</h2>
-                <p>Filename: {{ file }}</p>
+                <p>Filename: {{ request }}</p>
             </div>
 
             <div class="result-box">
                 <h2>Hash Comparison Results:</h2>
-                <p>Hash: {{ results }}</p>
+                <p>Hash: {{ metadata_list }}</p>
             </div>
 
         </form>
