--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -95,12 +95,12 @@
 
         <h2></h2>
 
-        <form action="/webpages/fileupload" onsubmit="fileSubmission()" method="post" enctype="multipart/form-data">
+        <form action="http://127.0.0.1:8000/webpages/hashcompareresult" onsubmit="fileSubmission()" method="post"
+            enctype="multipart/form-data">
 
             <h2> Upload File </h2>
-            <input type="file" required="required" name="file">
-            <h1></h1>
-            <input type="submit" value="Submit">
+            <input type="file" required="required" name="file" id="file">
+            <input type="submit" value="Upload File">
 
         </form>
 
