feat: hash compare post endpoint

--- a/darkmoon/api/templates/hash_compare_result.html
+++ b/darkmoon/api/templates/hash_compare_result.html
@@ -15,7 +15,7 @@
 
             <div class="result-box">
                 <h2>Uploaded File:</h2>
-                <p>Filename: {{ request }}</p>
+                <p>Filename: {{ filename }}</p>
             </div>
 
             <div class="result-box">
