--- a/darkmoon/api/static/style.css
+++ b/darkmoon/api/static/style.css
@@ -240,16 +240,19 @@ input[type="submit"]:hover {
     }
 }
 
-.result-box {
-    border: 1px solid #ccc;
-    padding: 10px;
-    background-color: #f9f9f9;
-    margin-top: 20px;
-}
 
 .results-container {
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+
+.result_box {
+    margin: auto;
+    max-width: 800px;
+    padding: 80px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
