--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -4,18 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static',path='/variables.css') }}" rel="stylesheet">
+    <script src="https://unpkg.com/htmx.org@latest/dist/htmx.min.js"></script>
 </head>
-
-<script>
-    function hashSubmission() {
-        alert("Successfully Submitted");
-    }
-
-    function fileSubmission() {
-        alert("File Successfully Uploaded");
-    }
-</script>
 
 <body>
     <header>
@@ -57,7 +47,7 @@
     <div style="padding:90px;">
         <h1></h1>
 
-        <form action="/webpages/hashupload" method="post" enctype="multipart/form-data" onsubmit="hashSubmission()">
+        <form action="/webpages/hashupload" method="post" enctype="multipart/form-data" onsubmit="submitForm(event)">
 
             <h2> Hash </h2>
 
@@ -90,19 +80,19 @@
 
             <input type="submit" value="Submit" />
 
-
         </form>
 
         <h2></h2>
 
-        <form action="http://127.0.0.1:8000/webpages/hashcompareresult" onsubmit="fileSubmission()" method="post"
-            enctype="multipart/form-data">
+        <form id="file_upload" hx-encoding='multipart/form-data' hx-post='/metadata/hashComparison' hx-target="#output">
 
             <h2> Upload File </h2>
-            <input type="file" required="required" name="file" id="file">
+            <input id="file" type="file" required="required" name="file">
             <input type="submit" value="Upload File">
 
         </form>
+
+        <div class="result_box" id="output" hx-swap="innerHTML">Awaiting File Upload...</div>
 
     </div>
 
