--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -6,10 +6,19 @@
     <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
     <script src="https://unpkg.com/htmx.org@latest/dist/htmx.min.js"></script>
 </head>
+
 <script>
-    function filesubmit() {
+    function fileSubmitMessage() {
+        const targetElement = document.getElementById('file_output');
+        targetElement.innerHTML = '<p>Loading...</p>';
         alert("File submitted")
     }
+    function hashSubmitMessage() {
+        const targetElement = document.getElementById('hash_output');
+        targetElement.innerHTML = '<p>Loading...</p>';
+        alert("Hash submitted")
+    }
+
 </script>
 
 <body>
@@ -52,53 +61,35 @@
     <div style="padding:90px;">
         <h1></h1>
 
-        <form action="/webpages/hashupload" method="post" enctype="multipart/form-data" onsubmit="submitForm(event)">
+        <form id="hash_upload" hx-get='/metadata/hashSearch' hx-trigger="submit" hx-target="#hash_output"
+            hx-swap="innerHTML" onsubmit="hashSubmitMessage()">
 
-            <h2> Hash </h2>
+            <h2> Hash and Hash Type </h2>
 
             <label for="Hash" class="hash" data-icon="p"> </label>
-            <input id="" name="password" required="required" type="text" placeholder="Hash" />
+            <input id="fullHash" name="fullHash" required="required" type="text"
+                placeholder="Ex: sha256:sdlkfjksldklsdjsdfklj" />
 
-            <hr>
-
-            <h2>
-
-            </h2>
-
-            <h2>Hash Type</h2>
-
-            <input type="radio" id="MDS" required="required" name="hash_type" value="MDS">
-            <label for="MDS">MD5</label><br>
-
-            <input type="radio" id="SHA-1" name="hash_type" value="SHA-1">
-            <label for="SHA-1">SHA-1</SHA-1></label><br>
-
-            <input type="radio" id="SHA-256" name="hash_type" value="SHA-256">
-            <label for="SHA-256">SHA-256</label><br>
-
-            <input type="radio" id="SHA-512" name="hash_type" value="SHA-512">
-            <label for="SHA-512">SHA-512</label>
-
-            <h2>
-
-            </h2>
+            <h2></h2>
 
             <input type="submit" value="Submit" />
 
         </form>
 
+        <div class="result_box" id="hash_output">Awaiting Hash Upload...</div>
+
         <h2></h2>
 
-        <form id="file_upload" hx-encoding='multipart/form-data' hx-post='/metadata/hashComparison' hx-target="#output"
-            onsubmit="filesubmit()">
+        <form id="file_upload" hx-encoding='multipart/form-data' hx-trigger="submit" hx-post='/metadata/hashComparison'
+            hx-target="#file_output" hx-swap="innerHTML" onsubmit="fileSubmitMessage()">
 
             <h2> Upload File </h2>
-            <input id="file" type="file" required="required" name="file">
+            <input id="fileInput" type="file" required="required" name="fileInput">
             <input type="submit" value="Upload File">
 
         </form>
 
-        <div class="result_box" id="output" hx-swap="innerHTML">Awaiting File Upload...</div>
+        <div class="result_box" id="file_output">Awaiting File Upload...</div>
 
     </div>
 
