--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -12,6 +12,21 @@
 
 </head>
 
+<script>
+    document.addEventListener("htmx:configRequest", function (event) {
+        if (event.detail.verb === "post") {
+            // Show the loading box when a POST request is triggered
+            document.getElementById("loadingBox").style.display = "block";
+        }
+    });
+
+    document.addEventListener("htmx:afterRequest", function (event) {
+        // Hide the loading box after the request is complete
+        document.getElementById("loadingBox").style.display = "none";
+    });
+
+</script>
+
 
 
 <script>
@@ -156,7 +171,7 @@
 
 
 
-        <form id="file_upload" hx-trigger="submit" hx-post='/metadata/hashComparison' hx-target="#file_output"
+        <form id="file_upload" hx-trigger="submit" hx-post='/metadata/hashComparison' hx-target="#loadingBox"
             hx-swap="innerHTML" hx-encoding='multipart/form-data' onsubmit="fileSubmitMessage()">
 
 
@@ -173,17 +188,13 @@
 
 
 
-            <input type="submit" value="Upload">
-
-
+            <input type="submit" value="Upload" hx-indicator="#loadingBox">
 
         </form>
 
-
-
-        <div class="result_box" id="file_output">Awaiting File Upload...</div>
-
-
+        <div class="result_box" id="loadingBox" style="display: none;">
+            <div class="loading-spinner" style="padding:30px; object-position: center;"></div>
+        </div>
 
     </div>
 
