feat: Added response from hash/hash type upload, and file upload. Changed how hash/hash type is uploaded in UI.

--- a/darkmoon/api/static/style.css
+++ b/darkmoon/api/static/style.css
@@ -254,6 +254,9 @@ input[type="submit"]:hover {
     background-color: rgb(255, 255, 255);
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    overflow-y: scroll;
+    overflow-wrap: break-word;
+
 }
 
 /* For loading pop up */
