feat: Credit webpage added, jinja test for credit page

--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -142,13 +142,14 @@
 
                         <a href="/upload">ISO Upload</a>
 
+
                     </div>
 
 
 
                 </div>
 
-                <button class="dropbtn"><a href="#">Credit</a></button>
+                <button class="dropbtn"><a href="/credit">Credit</a></button>
 
             </ul>
 
