--- a/darkmoon/api/templates/index.html
+++ b/darkmoon/api/templates/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static',path='/variables.css') }}" rel="stylesheet">
 </head>
 
 <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -40,7 +39,7 @@
                     </div>
 
                 </div>
-                <button class="dropbtn"><a href="#">Credit</a></button>
+                <button class="dropbtn"><a href="/credit">Credit</a></button>
             </ul>
 
         </nav>
@@ -48,11 +47,10 @@
     </header>
     <section>
         <article>
-            <h2 id="border" style="color:white">This project will catalogue file metadata from
+            <h2 id="border" style="color:white; text-align: center;">This project will catalogue file metadata from
                 multiple Windows operating
                 systems. The data will be
                 available for lookup based on file name or file hashes.</h2>
-
         </article>
         <div class="logo1"></div>
     </section>
