--- a/darkmoon/api/templates/upload.html
+++ b/darkmoon/api/templates/upload.html
@@ -65,7 +65,7 @@
                     </div>
 
                 </div>
-                <button class="dropbtn"><a href="#">Credit</a></button>
+                <button class="dropbtn"><a href="/credit">Credit</a></button>
             </ul>
 
         </nav>
