--- a/darkmoon/api/static/style.css
+++ b/darkmoon/api/static/style.css
@@ -117,6 +117,13 @@ h2 {
     color: #000000;
 }
 
+h3 {
+    border-color: rgb(0, 0, 0);
+    font-size: 25px;
+    margin-bottom: 10px;
+    color: #5d05bc;
+}
+
 input[type="text"],
 input[type="file"] {
     width: 50%;
