feat: changed credit page to about page

--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -47,7 +47,7 @@
                     </div>
 
                 </div>
-                <button class="dropbtn"><a href="#">Credit</a></button>
+                <button class="dropbtn"><a href="#">About</a></button>
             </ul>
 
         </nav>
