--- a/darkmoon/api/templates/hash.html
+++ b/darkmoon/api/templates/hash.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static',path='/variables.css') }}" rel="stylesheet">
 </head>
 
 <script>
@@ -47,7 +46,7 @@
                     </div>
 
                 </div>
-                <button class="dropbtn"><a href="#">About</a></button>
+                <button class="dropbtn"><a href="/about">About</a></button>
             </ul>
 
         </nav>
