--- a/darkmoon/api/templates/about.html
+++ b/darkmoon/api/templates/about.html
@@ -5,3 +5,44 @@
     <meta name="viewport" content="width=device-width">
     <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
 </head>
+
+<body>
+    <header>
+
+        <div class="logo">
+
+            <h1 id="blackoutline">
+
+                <p>Darkmoon</p>
+
+            </h1>
+
+        </div>
+
+        <nav>
+
+            <ul>
+                <button class="dropbtn"><a href="/">Home</a></button>
+                <div class="dropdown">
+
+                    <button class="button button1">Tools</button>
+
+                    <div class="dropdown-content">
+
+                        <a href="/hash-lookup">Hash Lookup</a>
+
+                        <a href="/upload">ISO Upload</a>
+
+                    </div>
+
+                </div>
+                <button class="dropbtn"><a href="/about">About</a></button>
+            </ul>
+        </nav>
+    </header>
+    <h2 id="border" style="color:white" text-align="center">Developers: Sean Meyer, Dominique Waldon, Pranav Elavarthi,
+        Asmita
+        Karandikar,
+        Siri Chatradi, Ping Kirsch, Mridula Thurasiraman, Viraj Ganguli</h2>
+
+</body>
