--- a/darkmoon/api/templates/index.html
+++ b/darkmoon/api/templates/index.html
@@ -39,7 +39,7 @@
                     </div>
 
                 </div>
-                <button class="dropbtn"><a href="#">About</a></button>
+                <button class="dropbtn"><a href="/about">About</a></button>
             </ul>
 
         </nav>
